manifest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: evite-micro-auth
spec:
  hosts:
    - "evite.com"
    - "www.evite.com"
  gateways:
    - evite-micro-gateway
  http:
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: evite-micro-auth
            port:
              number: 4041
---
apiVersion: v1
kind: Service
metadata:
  name: evite-micro-auth
  labels:
    app: evite-micro-auth
    service: evite-micro-auth
spec:
  ports:
    - port: 4041
      name: http
  selector:
    app: evite-micro-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evite-micro-auth
  labels:
    app: evite-micro-auth
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evite-micro-auth
      version: v1
  template:
    metadata:
      labels:
        app: evite-micro-auth
        version: v1
    spec:
      containers:
        - name: evite-micro-auth
          image: docker.io/mernxl/evite-micro-auth:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4041
---
